# Applied-Machine-Learning

./: .gitignore  CMakeLists.txt  ReadMe.md  phase1_test  tokenizer_test
include/: bpe.hpp  byte_encoder.hpp  tokenizer_assets.hpp
results/: phase3_benchmark.csv  phase4_cache_benchmark.csv
scripts/: make_wikitext_10k.py
src/: bpe.cpp  byte_encoder.cpp  main.cpp  tokenizer_assets.cpp  validate_gpt2.py
